[project]
name = 'katy'
version = '0.1'

[tool.pytest.ini_options]
addopts = '--no-header'
minversion = '6.0'
testpaths = ['tests']

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ['B', 'D', 'E', 'F', 'N', 'RUF', 'Q', 'W', 'UP']

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ['F401']  # unused-import
"readme.md" = ['E501']  # line-too-long

[tool.ruff.lint.pydocstyle]
convention = 'numpy'
