[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools']

[project]
authors = [{name = 'Malte Hoffmann'}]
description = 'PyTorch-first deep learning in medical image analysis'
dependencies = ['torch>=2.7']
dynamic = ['version']
license = 'MIT'
name = 'katy'
requires-python = '>=3.11'
urls.homepage = 'https://github.com/mu40/katy'

[tool.pytest.ini_options]
addopts = '--no-header'
minversion = '6.0'
testpaths = ['tests']
filterwarnings = ['ignore:Failed to initialize NumPy:UserWarning']

[tool.ruff]
line-length = 79
lint.select = ['B', 'D', 'E', 'F', 'N', 'RUF', 'Q', 'W', 'UP']
lint.flake8-quotes.inline-quotes = 'single'
lint.pydocstyle.convention = 'numpy'

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ['F401']  # unused-import
"README.md" = ['E501']  # line-too-long

[tool.setuptools]
dynamic.version = {attr = 'katy.__version__'}
packages = ['katy']
