[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools']

[project]
authors = [{name = 'Malte Hoffmann'}]
dependencies = ['torch>=2.7']
description = 'PyTorch-first deep learning in medical image analysis'
dynamic = ['version']
license = 'MIT'
name = 'katy'
requires-python = '>=3.11'
urls.homepage = 'https://github.com/mu40/katy'

[tool.pytest.ini_options]
addopts = ['--import-mode=importlib', '--no-header']
filterwarnings = ['ignore:Failed to initialize NumPy:UserWarning']
minversion = '6.0'
testpaths = ['tests']

[tool.ruff]
line-length = 79
lint.flake8-quotes.inline-quotes = 'single'
lint.pydocstyle.convention = 'numpy'
lint.select = ['B', 'D', 'E', 'F', 'N', 'RUF', 'Q', 'W', 'UP']

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ['F401']  # unused-import
"README.md" = ['E501']  # line-too-long

[tool.setuptools]
dynamic.version = {attr = 'katy.__version__'}
packages = ['katy']
